--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,31 @@
 body {
   background-color: rgb(173, 216, 230);
+  font-size: 20px;
+}
+
+/* div label {
+  border-style: rounded;
+} */
+
+form  {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 250px;
+  justify-content: space-between;
+} 
+
+label {
+  text-align: center;
+}
+
+#pass {
+  margin-top: 20px;
+}
+
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
